[package]
name = "rpsx"
version = "0.1.0"
authors = ["Kieron Josephs <kieron.josephs00@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1"
clap = { version = "2", features = ["yaml"] }
gl = "0.14"
imgui = "0.7"
imgui-opengl-renderer = "0.11"
imgui-sdl2 = "0.14.0"
sdl2 = { version = "0.34", features = ["bundled", "static-link"] }
