[package]
name = "rpsx"
version = "0.1.0"
authors = ["Kieron Josephs <kieron.josephs00@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1"
clap = { version = "2", features = ["yaml"] }
gl = "0.14"
imgui = "0.7"
imgui-opengl-renderer = "0.11"
imgui-sdl2 = "0.14.0"
rmp-serde = "1.1.2"
sdl2 = { version = "0.35", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
xz2 = "0.1"